# -garedli

./: DEEPSEEK_INTEGRATION.md  IMPLEMENTATION_PLAN.md  ai_scraper_architecture.d2  מסמך דרישות מוצר (PRD) - מגרדת רשת אוטונומית מבוססת AI.md  ניתוח אתגרי גירוד מודרניים והגדרת תפקידי סוכני AI.md  סיכום מחקר ספריות גירוד רשת (Web Scraping).md
manus-scrapex/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
manus-scrapex/.github/workflows/: ci.yml
manus-scrapex/docker/prometheus/: prometheus.yml
manus-scrapex/examples/: basic_usage.py
manus-scrapex/src/agents/: antibot.py  dispatcher.py  extractor.py  validator.py
manus-scrapex/src/api/: main.py
manus-scrapex/src/config/: settings.py
manus-scrapex/src/engines/: playwright_engine.py  scrapy_engine.py
manus-scrapex/src/models/: base.py  scraping.py
manus-scrapex/src/services/: llm_service.py  proxy_service.py
manus-scrapex/src/workflows/: scraping_workflow.py
manus-scrapex/tests/unit/: test_dispatcher.py
