[tool.poetry]
name = "manus-scrapex"
version = "1.0.0"
description = "AI-Powered Autonomous Web Scraper with Multi-Agent Architecture"
authors = ["Manus AI <dev@manus.ai>"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Core Scraping
scrapy = "^2.11.0"
playwright = "^1.40.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.3"
aiohttp = "^3.9.0"
httpx = "^0.25.0"

# Anti-Bot
playwright-stealth = "^0.0.9"
curl-cffi = "^0.5.10"
cloudscraper = "^1.2.71"
undetected-chromedriver = "^3.5.4"

# AI/ML
openai = "^1.5.0"
anthropic = "^0.8.0"
transformers = "^4.35.0"
torch = "^2.1.0"
scikit-learn = "^1.3.2"

# API & Web
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Task Queue
celery = "^5.3.4"
redis = "^5.0.0"
kombu = "^5.3.4"

# Database
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
motor = "^3.3.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"

# Utilities
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
python-json-logger = "^2.0.7"
tenacity = "^8.2.3"
cachetools = "^5.3.2"

# Monitoring
prometheus-client = "^0.19.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.38.0"}

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
locust = "^2.18.0"
faker = "^20.0.0"

# Development Tools
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"
flake8 = "^6.1.0"
pylint = "^3.0.0"
pre-commit = "^3.5.0"
ipython = "^8.18.0"
ipdb = "^0.13.13"

# Documentation
mkdocs = "^1.5.0"
mkdocs-material = "^9.4.0"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "scrapy.*",
    "playwright.*",
    "cloudscraper.*",
    "celery.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/virtualenv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
